# src/routes/experiences.routes.ts
@@ -5,7 +5,7 @@ import { isAuthenticated } from "../middlewares/verifyToken.middleware";
 
 router.get('/get-all', getExperiences);
 router.get('/:id', getExperienceById);
-router.post('/', isAuthenticated, uploadExperience)
+router.post('/create', isAuthenticated, uploadExperience)
 router.put('/:id', isAuthenticated, updateExperience)
 
 export default router;
