# src/routes/reviews.routes.ts
@@ -3,7 +3,7 @@ const router = express.Router();
 import { uploadReview, deleteReview } from "../controllers/reviews.controllers";
 import { isAuthenticated } from "../middlewares/verifyToken.middleware";
 
-router.post('/', isAuthenticated, uploadReview);
+router.post('/create', isAuthenticated, uploadReview);
 router.delete('/:id', isAuthenticated, deleteReview)
 
 export default router;
